# ct2

./: .gitignore  BUILD.gn  README.md  compile_flags.txt
lib/device/: BUILD.gn
lib/device/src/: datainit_ctboard.s  reg_ctboard.c  reg_stm32f4xx.c  retarget.c  startup_ctboard.s
lib/hal/: BUILD.gn
lib/hal/include/: hal_spi.h
scripts/: build_and_debug.sh  build_and_run.sh  debug.sh  flash.sh
src/lab01_dice/project/: BUILD.gn
src/lab01_dice/project/app/: dice_counter.c  dice_counter.h  lcd.c  main.c  statistics.c
src/lab02_bus_cycles/project/: BUILD.gn
src/lab02_bus_cycles/project/app/: main.c
src/lab03_gpio/project/app/: main.c
src/lab04_spi_1/project/: BUILD.gn
src/lab04_spi_1/project/app/: hal_spi.c
src/lab05_spi_2/project/: BUILD.gn
src/lab05_spi_2/project/app/: cmd_lcd.c  cmd_lcd.h  cmd_touch.c  cmd_touch.h  hal_mocked.c  hal_sbuf.c  hal_sbuf.h  hal_spi.c  hal_spi.h  lcd_io.c  lcd_io.h  main.c
src/lab06_timer_pwm/project/: BUILD.gn
src/lab06_timer_pwm/project/app/: main.c  timer.c
src/lab07-adc/project/app/: adc.c  main.c
src/lab08_memory_ROM/code_rom/app/: main.c
src/lab09_memory_SRAM_testing/code_ram/app/: hal_ct_buttons.c  hal_ct_buttons.h  main.c
src/lab10_cache/project/app/: arrays.c  arrays.h  cache.c  cache.h  config.h  main.c  simulation.c  simulation.h
src/lab11_FSM_Lift/project/app/: action_handler.c  action_handler.h  animation.c  animation.h  event_handler.c  event_handler.h  main.c  state_machine.c  state_machine.h  timer.c  timer.h
src/lab12_interrupt_performance/project/app/: main.c
