executable("lab05") {
  sources = [
    "app/cmd_lcd.c",
    "app/cmd_lcd.h",
    "app/cmd_touch.h",
    "app/cmd_touch.c",
    "app/hal_mocked.c",
    "app/hal_mocked.h",
    "app/hal_sbuf.h",
    "app/hal_sbuf.c",
    "app/hal_spi.h",
    "app/hal_spi.c",
    "app/lcd_io.h",
    "app/lcd_io.c",
    "app/main.c",
  ]
  deps = [
    "//lib/device",
    "//lib/hal",
  ]
  cflags += [
    "-DMOCKED_SPI_DISPLAY",
  ]
}
